Fix dark mode background color

--- a/recipe-finder/src/app/globals.css
+++ b/recipe-finder/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background:  #e7e7d7;
-  --foreground: #171717;
+  --background: #e7e7d7;
+  --foreground: #0a0a0a;
 }
 
 @theme inline {
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #e7e7d7;
     --foreground: #0a0a0a;
   }
 }
